--- a/dialogflow-6/package.json
+++ b/dialogflow-6/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^4.1.3",
     "core-js": "^3.6.5",
     "dompurify": "^2.3.0",
+    "dotenv": "^8.6.0",
+    "uuid": "^3.4.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
