(fix)ed the .env

--- a/dialogflow-6/.gitignore
+++ b/dialogflow-6/.gitignore
@@ -6,6 +6,7 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -23,3 +24,4 @@ pnpm-debug.log*
 *.sw?
 
 .vercel
+.env
