--- a/Dialogflow-18/package.json
+++ b/Dialogflow-18/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^4.1.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
