--- a/dialogflow-6/package.json
+++ b/dialogflow-6/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "dompurify": "^2.3.0",
     "dotenv": "^8.6.0",
+    "funnies": "^2.1.0",
     "uuid": "^3.4.0",
     "vue": "^2.6.11"
   },
