--- a/Dialogflow-18/package.json
+++ b/Dialogflow-18/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^4.1.3",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
 }
