Added Intent for Addition

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Dialogflow-21/Calcbot/node_modules
 Dialogflow-21/Calcbot/.env
+Dialogflow-21/function/package-lock.json
+Dialogflow-21/function/node_modules
