--- a/22/src/backend/package.json
+++ b/22/src/backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "@google-cloud/dialogflow": "^4.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "12.x"
