--- a/diagflow_45/ios/Flutter/Generated.xcconfig
+++ b/diagflow_45/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\Padikkan_Flutter\flutter
-FLUTTER_APPLICATION_PATH=F:\Diagflow\saturday-hack-night-dialogflow\diagflow_45
+FLUTTER_APPLICATION_PATH=F:\Diagflow\test
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
