--- a/diagflow_45/pubspec.yaml
+++ b/diagflow_45/pubspec.yaml
@@ -1,9 +1,5 @@
-name: diagflow_45
-description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+name: landingpage
+description: Cross platform sample landing page implemented in Flutter
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,23 +14,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-   sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  flutter_dialogflow: ^0.1.3
-  bubble: ^1.1.9+1
-  intl:
+  cupertino_icons: ^0.1.2
+  flutter_dialogflow: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,12 +43,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/email.png
+    - assets/flutter_image.jpg
+    - assets/menu.png
     - assets/json/dialogflow-45.json
-    - assets/images/camera.png
-    - assets/images/default.jpg
-    - assets/images/default.jpg
-    - assets/images/robot.jpg
-  #   - images/a_dot_ham.jpeg
+
+  # fonts:
+  #   - family: Indie Flower
+  #     fonts:
+  #       - asset: fonts/IndieFlower.ttf
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
