--- a/diagflow_45/web/manifest.json
+++ b/diagflow_45/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "diagflow_45",
-    "short_name": "diagflow_45",
+    "name": "test",
+    "short_name": "test",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
